--- a/sig-gen/package.json
+++ b/sig-gen/package.json
@@ -21,6 +21,7 @@
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "replicate": "^1.0.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
