--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "better-auth": "^1.1.21",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.476.0",
     "next": "^15.0.1",
@@ -32,12 +36,14 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
+    "tsx": "^4.19.3",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
